<resources>
    <string name="app_name">PE-Assignment</string>
    <string name="slogan">Your female health assistant.</string>
    <string name="had_flow">Had Flow</string>
    <string name="no_flow">No Flow</string>
    <string name="flow_level">FLOW LEVEL</string>
    <string name="period">PERIOD</string>
    <string name="article">
        The sun is out, hemlines are rising, and bright, bold colors are dominating the streets. It can mean only one thing: Spring 2022 fashion trends are finally here. Time to pack up gray knits and tuck away those wool trousers—the clothing that will carry you through the spring 2022 season has an upbeat, offbeat quality to it.
        Seen at runway shows from New York to Tokyo, the trends of spring 2022 embrace vibrancy and joy. At Tory Burch, bold stripes in black and white—some cut with a flash of grassy green—signaled a new quirky order. Prada and Chanel put swimsuits and short-shorts on the catwalk
    </string>
    <string name="article_category">Article Category</string>
    <string name="hot_article">Hot Article</string>
    <string name="recent_article">Recent Article</string>
    <string name="handpick">Handpick</string>
    <string name="articles">Articles</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="next_dose">Next Dose:</string>

    <string name="main_bg">
        This is bg of home page.
    </string>

    <string name="cycle_tracking">⭕ Cycle Tracking</string>
    <string name="menstruation">Menstruation Flow</string>
    <string name="ds_date">To be display</string>

    <string name="cd_title_vaccine">HPV Vaccine</string>
    <string name="cd_dose">🗓️ Dose Recording</string>
    <string name="cd_vaccine_title">HPV Vaccine</string>
    <string name="cd_cancer_tracking">🏥 Cancer Tracking</string>
    <string name="cd_title_cancer">Cervical Cancer</string>
    <string name="cd_cancer_desc1">🗒️ Medical Record</string>
    <string name="cd_cancer_desc2">❤️‍🩹 Sympton Log</string>

    <string name="cd_forum">🗞️ Health Forum</string>
    <string name="cd_find_more">🔍 Click to find more</string>

    <string name="copyright">COPYWRITE@2022 BY A TEAM</string>

    <string name="personal_information">PERSONAL INFORMATION</string>
    <string name="name">NAME</string>
    <string name="tell_us_your_name">tell us your name</string>
    <string name="age">AGE</string>
    <string name="settings">SETTINGS</string>
    <string name="period_prediction_reminder">Period prediction reminder</string>
    <string name="system_settings">SYSTEM SETTINGS</string>
    <string name="syc_with_huawei_health">Sync with \'Huawei Health\'</string>
    <string name="personal_customization">PERSONAL CUSTOMIZATION</string>
    <string name="selected_item">Selected item:</string>
    <string-array name="Languages">
        <item>English</item>
        <item>Chinese</item>
        <item>Malay</item>
        <item>Spanish</item>
        <item>Japanese</item>
    </string-array>


    <string name="title_1">First medical treatment</string>
    <string name="title_2">Biopsy for the first time</string>
    <string name="title_3">Second review</string>

    <string name="data_1">Jan 22</string>
    <string name="data_2">Nov 12</string>
    <string name="data_3">Nov 18</string>

    <string name="info_1">Bleeding profusely. Make an appointment for a biopsy.</string>
    <string name="info_2">Can\'t drink or eat. Keep a regular schedule.</string>
    <string name="info_3">Review with results one week after biopsy.</string>


    <!--<           Cycle log-->

    <string name="cycle_log">Cycle Log</string>
    <string name="men">MENSTRUATION</string>
    <string name="data">OTHER DATA</string>
    <string name="cycle_history">CYCLE HISTORY</string>
    <string name="add1">Period</string>
    <string name="add2">Symptoms</string>
    <string name="add3">Basal Body Temperature</string>
    <string name="add4">Your Cycle</string>
    <string name="add">+</string>
    <string name="redirect"> > </string>


    <!--    Cycle detail-->
    <string name="cycle_detail">Cycle Details</string>
    <string name="cycle_len">CYCLE LENGTH</string>
    <string name="cycle_status1">Normal</string>
    <string name="len_days">6</string>
    <string name="days">days</string>
    <string name="pdf">Export PDF</string>
    <string name="cycle_date">25 Nov - 1 Dec, 2022</string>
    <string name="temp_38">38°C</string>
    <string name="temp_38_high">38°C ↑</string>
    <string name="temp_37">37°C</string>
    <string name="temp_36">36°C</string>
    <string name="temp_36_low">36°C ↓</string>
    <string name="light">Light</string>
    <string name="medium">Medium</string>
    <string name="heavy">Heavy</string>
    <string name="date">DATE</string>


    <string name="diagnostic_result">Diagnostic Result</string>
    <string name="detailed_inspection">Detailed inspection</string>
    <string name="timeline_info">Develop a good recording habit, it will be easier for the doctor to understand you :).</string>

    <string name="manufactuerer">MANUFACTUERER</string>
    <string name="dose">DOSE</string>
    <string name="hpv_record">HPV Record</string>
    <string name="_1_3">1/3</string>
    <string name="date_of_first_n_dose_onset">Date of first dose onset：</string>
    <string name="reminder">Reminder</string>


    <string name="date_of_first_nhpv_test_onset">Date of First\nHPV Test Onset</string>
    <string name="next">Next</string>
    <string name="hpv_vaccine_track">HPV Vaccine Track</string>
    <string name="do_you_need_to_set_reminders">Do you need to set reminders:</string>
    <string name="no">No</string>
    <string name="done">Done</string>
    <string name="test_record">Test Record</string>
    <string name="next_review">Next Review</string>
    <string name="test">TEST</string>
    <string name="hospital">HOSPITAL</string>
    <string name="vaccine_reminder">Vaccine Reminder</string>
    <string name="_0">0</string>
    <string name="_7">7</string>

    <string name="symptom_bladder_incontinence">Bladder Incontinence</string>

    <string name="type">TYPE</string>
    <string name="cervical_cancer">Cervical Cancer</string>
    <string name="choose_which_cancer_to_track">Choose which cancer to track:</string>
    <string name="time">TIME</string>
    <string name="choose_an_uncomfortable_time">Choose an uncomfortable Time</string>
    <string name="evening">Evening</string>
    <string name="afternoon">Afternoon</string>
    <string name="morning">Morning</string>
    <string name="other_time">OTHER TIME</string>
    <string name="exercising">Exercising</string>
    <string name="sleeping">Sleeping</string>
    <string name="detailed_medical_information">Detailed medical information</string>
    <string name="title">TITLE</string>
    <string name="new_record_title">New record title</string>
    <string name="description">DESCRIPTION</string>
    <string name="short_description_of_the_record">Short description</string>
    <string name="symptoms">SYMPTOMS</string>
    <string name="select_all_that_apply">Select all that apply.</string>
    <string name="recent_symptoms">RECENT SYMPTOMS</string>
    <string name="abdominal_cramps">Abdominal Cramps</string>
    <string name="acne">Acne</string>
    <string name="chills">Chills</string>
    <string name="additional_symptoms">ADDITIONAL SYMPTOMS</string>
    <string name="appetite_changes">Appetite Changes</string>
    <string name="baldder_incontinence">Baldder Incontinence</string>

    <string name="account_and_security">Account and Security</string>
    <string name="time_zone_setting">Time Zone Setting</string>
    <string name="region_setting">Region Setting</string>
    <string name="privacy_setting">Privacy Setting</string>
    <string name="language_setting">Language Setting</string>
    <string name="notification_setting">Notification Setting</string>
    <string name="log_out">Log out</string>
    <string name="my_account">My Account</string>
    <string name="tv_cycle_history">Cycle History</string>
    <string name="tv_current_cycle">Current Cycle:</string>

    <string name="cancer_card_text02">Choose symptoms or customize</string>
    <string name="cancer_symptoms">SYMPTOMS</string>
    <string name="breast_lumps">Breast lumps</string>
    <string name="breast_pain">Breast pain</string>
    <string name="change_in_breast_shape">Change in breast shape</string>
    <string name="sunken_skin">Sunken skin</string>
    <string name="fluid_in_nipples">Fluid in nipples</string>
    <string name="other">Other</string>
    <string name="stage">What stage are you at now?</string>
    <string name="vaginal_bleeding">Vaginal bleeding</string>
    <string name="pelvic_pain">Pelvic pain</string>
    <string name="pain_during_intercourse">Pain during intercourse</string>
    <string name="watery_bloody_vaginal_discharge">Watery, bloody vaginal discharge</string>
    <string name="abnormal_secretion">Abnormal secretion</string>
    <string name="symptom_description">Symptom Description:</string>
    <string name="tap_here_to_enter">Tap here to enter.</string>
    <string name="only_fot_this_record">ONLY FOT THIS RECORD</string>
    <string name="yes">Yes</string>
    <string name="file">FILE</string>
    <string name="learn_more_about_you">Learn more about you</string>
    <string name="set_now_or_modify_later">Set now or modify later</string>
    <string name="language">Language</string>
    <string name="help_center">Help Center</string>
    <string name="help">Help</string>
    <string name="track_log">Track log</string>
    <string name="my_cycle">My Cycle</string>
    <string name="hint_temp">key in your daily temperature</string>

    <string name="phase_1">Phase 1</string>
    <string name="phase_2">Phase 2</string>
    <string name="phase_3">Phase 3</string>
    <string name="phase_4">Phase 4</string>

    <string name="_2_3">2/3</string>
    <string name="_3_3">3/3</string>
    <string name="start_tracking_your_period_here">Start tracking your period here!</string>
    <string name="help_log_your_hpv_appointment">Help log your HPV appointment!</string>
    <string name="body_temperature">BODY TEMPERATURE</string>
    <string name="tell_us_your_age">tell us your age</string>


</resources>