<?xml version="1.0" encoding="utf-8"?>
<layout>
    <data>
        <variable
            name="periodViewModel"
            type="com.example.pe_assignment.cycle.PeriodViewModel" />
        <variable
            name="symptonSelectionFragment"
            type="com.example.pe_assignment.cycle.SelectionSymptonFragment" />
    </data>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".cycle.SelectionSymptonFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginVertical="150dp"
        app:layout_anchor="@+id/linearLayout"
        app:layout_anchorGravity="center">


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            style="@style/Card_View"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/card_content_bg">
                    <TextView
                        android:id="@+id/card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_Title"
                        android:background="@color/input_card_purple2"
                        android:text="@string/symptoms"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_Title02"
                        android:text="@string/select_all_that_apply"
                        android:textColor="@color/black"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_Title02"
                        android:text="@string/recent_symptoms"/>


                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_horizontal_card"/>

                    <RadioButton
                        android:id="@+id/card_attr1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{periodViewModel.sym.equals(@string/abdominal_cramps)}"
                        android:onClick="@{() -> periodViewModel.setSym(@string/abdominal_cramps)}"
                        style="@style/Card_RadioButton"
                        android:text="@string/abdominal_cramps"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_horizontal_card"/>

                    <RadioButton
                        android:id="@+id/card_attr2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{periodViewModel.sym.equals(@string/acne)}"
                        android:onClick="@{() -> periodViewModel.setSym(@string/acne)}"
                        style="@style/Card_RadioButton"
                        android:text="@string/acne"/>

<!--                    android:checked="@{myViewModel.time.equals(@string/exercising)}"-->
<!--                    android:onClick="@{() -> myViewModel.setTime(@string/exercising)}"-->

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_horizontal_card"/>

                    <RadioButton
                        android:id="@+id/card_attr3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_RadioButton"
                        android:text="@string/chills"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_horizontal_card"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_Title02"
                        android:text="@string/additional_symptoms"/>

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_horizontal_card"/>

                    <RadioButton
                        android:id="@+id/card_attr4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{periodViewModel.sym.equals(@string/chills)}"
                        android:onClick="@{() -> periodViewModel.setSym(@string/chills)}"
                        style="@style/Card_RadioButton"
                        android:text="@string/appetite_changes"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_horizontal_card"/>

                    <RadioButton
                        android:id="@+id/card_attr5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:checked="@{periodViewModel.sym.equals(@string/baldder_incontinence)}"
                        android:onClick="@{() -> periodViewModel.setSym(@string/baldder_incontinence)}"
                        style="@style/Card_RadioButton"
                        android:text="@string/baldder_incontinence"/>
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/line_horizontal_card"/>


                </RadioGroup>
            </RelativeLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>
    <Button
        android:id="@+id/btn_done_symptom"
        android:layout_marginTop="600dp"
        android:layout_width="@dimen/btn_grey_width"
        android:layout_height="@dimen/btn_grey_height"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_selector"
        android:textColor="@color/btn_text"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/btn_text"
        android:text="@string/done" />
</FrameLayout>
</layout>