<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".CycleDetailFragment">


    <TextView
        android:id="@+id/tv_cycle_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:textColor="@color/black"
        android:text="@string/cycle_detail"
        android:textStyle="bold"
        android:textSize="24sp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </TextView>

    <TextView
        android:id="@+id/tv_length"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/grey_text"
        android:textStyle="normal"
        android:text="@string/cycle_len"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_cycle_detail"
        >

    </TextView>

    <TextView
        android:id="@+id/tv_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/cycle_status1"
        android:textColor="@color/green_normal"
        android:textStyle="bold"
        app:layout_constraintLeft_toRightOf="@+id/tv_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_cycle_detail"
        >
    </TextView>

    <TextView
        android:id="@+id/tv_len_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/len_days"
        android:textSize="30sp"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="@+id/tv_length"
        app:layout_constraintTop_toBottomOf="@+id/tv_length"
        >

    </TextView>

    <TextView
        android:id="@+id/tv_days"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:layout_marginStart="5dp"
        android:layout_marginBottom="5dp"
        android:text="@string/days"
        android:textColor="@color/grey_text"
        app:layout_constraintLeft_toRightOf="@+id/tv_len_days"
        app:layout_constraintBottom_toBottomOf="@+id/tv_len_days"
        >
    </TextView>

    <TextView
        android:id="@+id/tv_pdf"
        android:clickable="true"
        android:focusable="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:textColor="@color/pdf"
        android:text="@string/pdf"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_len_days">

    </TextView>

    <GridView
        android:id="@+id/gd_detail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:background="@color/grey_bg"
        android:numColumns="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_pdf"
        app:layout_constraintBottom_toBottomOf="parent">

    </GridView>

</androidx.constraintlayout.widget.ConstraintLayout>