<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".login.Register3Fragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:textSize="30sp"
            android:text="@string/set_now_or_modify_later"
            android:textColor="#000000"
            android:textStyle="bold"/>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Card_View"
            app:cardBackgroundColor="#F2F0F1"
            android:layout_marginBottom="5dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="10dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                    <TextView
                        android:id="@+id/card_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_Title"
                        android:background="@color/input_card_blue3"
                        android:text="@string/settings"/>

                    <TextView
                        android:id="@+id/register_title1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_Title02"
                        android:textSize="18sp"
                        android:text="@string/personal_customization"/>

                    <RadioButton
                        android:id="@+id/register_ratio_btn1"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_RadioButton"
                        android:text="@string/period_prediction_reminder"
                        android:textColor="@color/card_content2"/>

                    <TextView
                        android:id="@+id/register_title2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_Title02"
                        android:background="@color/white"
                        android:textSize="18sp"
                        android:text="@string/system_settings"/>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="#EAE8EA">

                    <TextView
                        android:id="@+id/register_title2.2"
                        android:layout_width="wrap_content"
                        android:layout_height="35dp"
                        android:layout_marginTop="2dp"
                        android:text="@string/language"
                        android:paddingStart="@dimen/card_content_padding"
                        android:paddingEnd="@dimen/card_content_padding"
                        android:layout_marginStart="@dimen/card_content_margin"
                        android:gravity="center_vertical"
                        android:textColor="@color/card_content2"
                        android:textSize="16sp"/>

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_toEndOf="@+id/register_title2.2"
                        android:layout_marginLeft="57dp"
                        android:layout_marginTop="9dp"/>
                    </RelativeLayout>


                    <RadioButton
                        android:id="@+id/register_ratio_btn2"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        style="@style/Card_RadioButton"
                        android:text="@string/syc_with_huawei_health"
                        android:textColor="@color/card_content2"
                        android:textSize="17sp" />


            </LinearLayout>


        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <Button
        android:id="@+id/register_btn3"
        android:layout_width="@dimen/btn_grey_width"
        android:layout_height="@dimen/btn_grey_height"
        android:layout_marginTop="450dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_selector"
        android:textColor="@color/btn_text"
        android:textAllCaps="false"
        android:textStyle="bold"
        android:textSize="@dimen/btn_text"
        android:text="Start record journey!"/>

</FrameLayout>