<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".hpv.HpvReminderFragment">

    <include
        layout="@layout/hpv_input_header"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="80dp">
    <ImageView
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/hpv_3_2"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="30dp"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            android:text="@string/do_you_need_to_set_reminders" />
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/reminder_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="30dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="30dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="Yes"/>

            <RadioButton
                android:id="@+id/reminder_off"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingStart="31dp"
                android:layout_marginStart="40dp"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/no"/>
        </RadioGroup>


    </LinearLayout>
    <Button
        android:id="@+id/done_btn"
        android:layout_width="@dimen/btn_grey_width"
        android:layout_height="@dimen/btn_grey_height"
        android:layout_marginTop="600dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/btn_selector"
        android:textColor="@color/btn_text"
        android:textAllCaps="false"
        android:textSize="@dimen/btn_text"
        android:textStyle="bold"
        android:text="@string/done" />

</FrameLayout>